# databricks-skill-evaluator

./: .gitignore  .mcp.json  README.md  SKILL.md  TECHNICAL.md  example.md  pyproject.toml  run_server.py  setup.sh
skill-example/: README.md  SKILL.md
skill-example/eval/: ground_truth.yaml  manifest.yaml  output_instructions.md  thinking_instructions.md
src/skill_evaluator/: __init__.py  auth.py  cli.py  mcp_resolver.py  orchestrator.py  paths.py  server.py  skill_discovery.py  test_instructions.py
src/skill_evaluator/agent/: executor.py
src/skill_evaluator/core/: config.py  dataset.py  trace_models.py
src/skill_evaluator/criteria/: eval_criteria.py
src/skill_evaluator/grading/: llm_backend.py  mlflow_judges.py  semantic_grader.py
src/skill_evaluator/levels/: agent_evaluator.py  base.py  integration_tests.py  output_eval.py  shared_validators.py  static_eval.py  thinking_eval.py  unit_tests.py
src/skill_evaluator/optimize/: config.py  feedback.py  splitter.py  utils.py
src/skill_evaluator/reporting/: _styles.py  html_report.py
src/skill_evaluator/scorers/: deterministic.py  llm_judges.py  trace.py
